--- a/tokenGuides/REKT.ejs
+++ b/tokenGuides/REKT.ejs
@@ -1,1 +1,4 @@
-Rekt Coin for the RektEx forum
+<blockquote>
+  <p>Rekt Coin for the RektEx Forum.</p>
+  <footer><a href="http://rektex.com/" target="_blank">http://rektex.com/</a></footer>
+</blockquote>
