--- a/css/black.css
+++ b/css/black.css
@@ -379,3 +379,15 @@ pre code {
 .ttip:hover .text {
   visibility: visible;
 }
+
+#volume {  
+  display: none;
+}
+
+#orderBookScroll {
+  height: calc(100vh - 81px) !important;
+}
+
+div.buysellwidget form.form-horizontal {
+  margin-right: 10%;
+}
