--- a/tokenGuides/OHNI.ejs
+++ b/tokenGuides/OHNI.ejs
@@ -1,4 +1,4 @@
 <blockquote>
-  <p>Ohni is an economic system for the new age.</p>
-  <footer><a href="http://ohni.io/" target="_blank">http://ohni.io/</a></footer>
+  <p>The cryptocurrency uniting cryptocurrencys</p>
+  <footer><a href="http://ohni.us/" target="_blank">http://ohni.us/</a></footer>
 </blockquote>
